unpackaged/main/default/objects/Claim_File__c/Claim_File__c.object-meta.xml
<CustomObject>
    <label>Claim File</label>
    <nameField>
        <label>Claim_File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>