unpackaged/main/default/objects/Claim_File__c/fields/File_Size__c.field-meta.xml
<CustomField>
    <fullName>File_Size__c</fullName>
    <formula>IF(!(ISBLANK(Shortcut__c )), RIGHT(Shortcut__c, (LEN(Shortcut__c) - FIND(&#39;:&#39;, Shortcut__c))), 
IF(File_Size_in_Bytes__c &gt; 1024, 
IF(File_Size_in_Bytes__c &gt; 1048576, 
IF(File_Size_in_Bytes__c &gt; 1073741824, 
TEXT(ROUND((File_Size_in_Bytes__c /1073741824),2)) &amp; &quot; GB&quot;, 
TEXT(ROUND((File_Size_in_Bytes__c /1048576),2)) &amp; &quot; MB&quot;), 
TEXT(ROUND((File_Size_in_Bytes__c /1024),2)) &amp; &quot; KB&quot;), 
TEXT(File_Size_in_Bytes__c) &amp; &quot; bytes&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Size</label>
    <type>Text</type>
</CustomField>