unpackaged/main/default/objects/Claim_File__c/fields/Preview_Key__c.field-meta.xml
<CustomField>
    <fullName>Preview_Key__c</fullName>
    <label>Preview Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>