unpackaged/main/default/objects/Claim_File__c/fields/Shortcut__c.field-meta.xml
<CustomField>
    <fullName>Shortcut__c</fullName>
    <label>Shortcut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>