unpackaged/main/default/objects/Claim_File__c/fields/Thumbnail_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Version_Id__c</fullName>
    <label>Thumbnail Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>